# Warp-Ingest

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-publish.yml  docker-test.yml  lint.yml  python-publish.yml  test.yml
benchmarks/: PERF_OPTIMIZATION.md  __init__.py  timing_harness.py
benchmarks/multicolumn/: __init__.py  probe.py  report.py
benchmarks/olmocr_bench/: README.md  RESULTS.md  __init__.py  analyze_results.py  generate.py  setup_olmocr_bench.sh
benchmarks/parsebench/: README.md  RESULTS.md  __init__.py  _last_run_summary.txt  run.py  setup_parsebench.sh  table_providers.py  warp_ingest_provider.py  warp_layout_adapter.py  warp_markdown.py
benchmarks/semunit/: README.md  golden_204_clause.json  heldout.py  heldout_baseline.json  heldout_manifest.json  manifest.json  prep.py  score.py
docs/: bbox_architecture.md  docsling_layout_oracle.md  oc_export_heuristic_audit.md  oc_structural_eval_legal_vs_hetero.md  opencontracts_export_format.md  s1_cross_engine_regression.md  text_faithfulness_eval.md  text_faithfulness_eval_results.jsonl
docs/runbooks/: structural-quality-audit.md
notebooks/: pdf_visual_ingestor_step_by_step.ipynb
scripts/: assemble_legal_golden.py  build_docsling_fixtures.py  build_hetero100_baseline.py  build_hetero100_fixtures.py  build_image_fixture.py  build_legal100_baseline.py  build_legal100_fixtures.py  build_legal_vision_tasks.py  build_oc_batch_fixtures.py  build_opencontracts_fixtures.py  build_s1_fixtures.py  build_semunit_baseline.py  build_semunit_golden.py  extract_legal_votes.py  finalize_legal_eval.py  oc_audit60.py  oc_sample_audit.py  oc_visualize.py  parsebench_content_fasteval.py  parsebench_format_fasteval.py  parsebench_summarize.py  parsebench_table_fasteval.py  run_structural_eval.py  semunit_bench.py  tbl_engine_spike.py  tbl_interleave_diag.py  tbl_mode_timing.py  tbl_overseg_diag.py  tbl_region_route_spike.py  text_faithfulness_eval.py
tests/: conftest.py  docsling_compat.py  oc_batch_compat.py  oc_compat.py  oc_golden_eval.py  oc_hetero100_compat.py  oc_legal100_compat.py  oc_semunit_compat.py  run_ingestor_page_test.py  s1_compat.py  test_fixtures_parse.py  test_image_tokens.py  test_layout_docsling_regression.py  test_line_parser.py  test_markdown_exporter.py  test_multicolumn_probe.py  test_multicolumn_routing.py  test_oc_batch_regression.py  test_oc_golden_eval.py  test_oc_hetero100_regression.py  test_oc_legal100_regression.py  test_oc_semunit_eval.py  test_oc_semunit_regression.py  test_oc_visualize.py  test_opencontracts_export.py  test_opencontracts_regression.py  test_package_metadata.py  test_parallel_front_end.py  test_parsebench_warp_markdown.py  test_pdf_plumber_columns.py  test_pdf_plumber_grid.py  test_pdf_plumber_parser.py  test_s1_regression.py  test_segmentation_metrics.py  test_semantic_units.py  test_semantic_units_additive.py  test_sent_tokenizer.py  test_service.py  test_table_engine.py  test_table_parser.py  (+1 more)
tests/fixtures/: docsling_layout_baseline.json  hetero100_baseline.json  hetero100_golden.json  legal100_baseline.json  legal100_golden.json  legal100_manifest.json  oc_batch_baseline.json  oc_export_baseline.json  s1_baseline.json  s1_manifest.json  semunit_baseline.json  semunit_golden.json  semunit_manifest.json  test_data.json
tests/fixtures/docsling_targets/: cerebras_ex1013e.json  cerebras_ex231.json  eton_dev_agreement.json  exyn_ex1010.json  exyn_ex211.json  forbright_ex1012.json  generate_bio_ex33.json  spacex_ex211.json  spacex_ex41.json  usc_title1.json
tests/fixtures/s1_targets/: cerebras_s1__exhibit1013esx_f124a6.json  cerebras_s1__exhibit1018sx1_56fdc8.json  (+48 more)
warp_ingest/file_parser/: __init__.py  ocr_parser.py  parser_factory.py  pdf_plumber_parser.py
warp_ingest/ingestion_daemon/: __main__.py  app.py  auth.py  autotune.py  config.py  service_dependencies.py
warp_ingest/ingestor/: __init__.py  image_tokens.py  ingestor_api.py  line_parser.py  markdown_exporter.py  oc_visualize.py  opencontracts_exporter.py  pdf_ingestor.py  segmentation_metrics.py  semantic_units.py  styling_utils.py  table_engine.py
warp_ingest/ingestor_utils/: compat.py  parsing_utils.py  utils.py  word_splitter.py
(+5 files in other folders)
